# conceptlab

./: .gitignore  README.md  plan.md  plan_domain_concepts.md  plan_tabular_concepts.md  pyproject.toml
conceptlab/: __init__.py  case_explorer.py  cli.py  concept_cases.py  concept_configs.py  concept_eval.py  concept_experiment.py  concept_models.py  concept_report.py  concept_train.py  concepts.py  contract.py  datagen.py  eval.py  experiment.py  fraud_attribution.py  fraud_report.py  labeldsl.py  models.py  report.py  tabular.py  train.py
conceptlab/methods/: __init__.py  attribution.py  base.py  baselines.py  causal.py  concepts.py  sae.py
configs/: circle_transformer.yaml  easy_blobs.yaml  superposition_xor.yaml
docs/: index.html
docs/concept_runs/: index.html
docs/concept_runs/tab_compound/: metrics.json
docs/concept_runs/tab_correlated/: metrics.json
docs/concept_runs/tab_overdetermined/: metrics.json
docs/fraud_runs/fraud_default/: metrics.json
docs/runs/: index.html
docs/runs/circle_transformer/: metrics.json
docs/runs/easy_blobs/: metrics.json
docs/runs/superposition_xor/: metrics.json
docs/wiki/: concepts.html  generation.html  index.html  interpretability.html  wiki.css
runs/: index.html
runs/circle_transformer/: metrics.json
runs/easy_blobs/: metrics.json
runs/superposition_xor/: metrics.json
scripts/: build_wiki_concepts.py
tests/: test_case_explorer.py  test_concepts.py  test_datagen.py  test_pipeline.py
