[project]
name = "conceptlab"
version = "0.1.0"
description = "A ground-truth benchmark for validating transformer interpretability methods against synthetic concept data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "plotly>=5.20",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pandas>=2.3.3",
    "pyarrow>=25.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
conceptlab-run = "conceptlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conceptlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# Toy-scale models; CPU wheels keep the environment small and portable.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
